# proyecto-final-2025-2-grun

./: .gitignore  CMakeLists.txt  README.md  stock_data_test.csv  stock_data_training.csv
data/config/: portfolio_symbols.txt
docs/: README.md
include/utec/algebra/: tensor.h
include/utec/apps/: data_loader.h  portfolio_optimizer.h  portfolio_utils.h  stock_predictor.h
include/utec/nn/: neural_network.h  nn_activation.h  nn_dense.h  nn_interfaces.h  nn_loss.h  nn_optimizer.h
scripts/: prepare_data.py  prepare_data_simple.py
src/utec/apps/: data_loader.cpp  model_validator.cpp  portfolio_example.cpp  portfolio_optimizer.cpp  stock_predictor.cpp  stock_predictor_main.cpp
tests/: generate_outputs.sh  makefile  run_all_tests.sh
tests/convergence/test_1/: test_1.cpp  test_1.in
tests/convergence/test_2/: test_2.cpp  test_2.in
tests/convergence/test_3/: run_test  test_3.cpp
tests/convergence/test_4/: test_4.cpp  test_4.in
tests/dense/test_1/: run_test  test_1.cpp
tests/dense/test_2/: run_test  test_2.cpp  test_2.in
tests/dense/test_3/: test_3.cpp  test_3.in
tests/dense/test_4/: run_test  test_4.cpp  test_4.in
tests/relu/test_1/: test_1.cpp  test_1.in
tests/relu/test_2/: test_2.cpp  test_2.in
tests/relu/test_3/: test_3.cpp  test_3.in
tests/relu/test_4/: test_4.cpp  test_4.in
